fix header height on tablet

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -876,7 +876,7 @@ section {
 		}
 	}
 }
-@media only screen and (max-width: 420px) and (orientation: portrait) {
+@media only screen and (max-width: 770px) and (orientation: portrait) {
 	.header {
 		height: 8vh;
 	}
